# LLM-WikiRace

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  REPRODUCIBILITY.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt  run_modes.ps1
benchmarks/: README.md  qualitative_wikirace_cases.yaml
configs/: stratified_navigator.yaml
data/: hard_instances.jsonl
docs/: core_loop_refactor.md  distance_oracle.md  future_development_plan.md  phase1_live_runner.md  phase2_ablations.md
outputs/: ablation_results.jsonl  failure_analysis.md  summary.csv  summary.md
paper/: llm_redteam_dashboard_paper.md
scripts/: aggregate_benchmark_results.py  check_oracle_coverage.py  run_benchmark_batch_eval.py  run_live_phase1.py  run_phase2_ablations.py  run_wikirace_ablations.py  run_wikirace_baseline.py  run_wikirace_stratified.py
src/: __init__.py  generate_demo_benchmark.py
tests/: test_ablation_runner.py  test_adapter.py  test_baseline_purity.py  test_beam_search_mock_graph.py  test_benchmark_adapter.py  test_budget_pruning.py  test_config_loader.py  test_config_validation.py  test_cycle_pruning.py  test_dashboard_settings.py  test_dead_end.py  test_demo_benchmark.py  test_distance_oracle.py  test_dry_run.py  test_escape_mode.py  test_factory_runner.py  test_fallback.py  test_hygiene.py  test_invariant_gate.py  test_json_contract.py  test_json_schema_outputs.py  test_live_adapter_mocked.py  test_logging_schema.py  test_mode_config.py  test_mode_isolation.py  test_real_models_gate.py  test_replan_triggers.py  test_result_schema.py  test_topology.py  (+3 more)
(+54 files in other folders)
